--- a/.gitignore
+++ b/.gitignore
@@ -369,7 +369,7 @@ MigrationBackup/
 *.sublime-workspace
 
 # IDE - VSCode
-**/.vscode/*
+.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
