--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
-    "build-prod": "ng build --configuration production",
-    "watch": "ng build --watch --configuration dev",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
