--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@auth0/auth0-angular": "^1.9.0",
+    "angular": "^1.8.2",
+    "bootstrap": "^5.1.3",
     "ngx-cookie-service": "^13.1.2",
     "rxjs": "~7.4.0",
-    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "sonarqube-scanner": "^2.8.1",
+    "tslib": "^2.3.1",
     "typescript": "~4.5.2"
   }
 }
