--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,12 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "tslib": [
+        "path/to/node_modules/tslib/tslib.d.ts"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -30,4 +35,5 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
+
 }
