--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ngx-cookie-service": "^13.2.0",
     "ngx-toastr": "^14.2.3",
     "rxjs": "~7.5.5",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.5"
   },
