--- a/auth_config.json
+++ b/auth_config.json
@@ -1,6 +1,6 @@
 {
-  "domain": "dev-8qh2j-zl.us.auth0.com",
-  "clientId": "BSbduxtx3CUlIc5uSRbQKID9EQrQXKWZ",
+  "domain": "dev-beazcaxy.us.auth0.com",
+  "clientId": "6Iewy037OUNolNG9Q7oS1pZCIZ6DakAs",
   "audience": "{API_IDENTIFIER}",
   "apiUri": "http://localhost:3001",
   "appUri": "http://localhost:4200",
